@@ -127,6 +127,13 @@
 	    }
 	}
 
+
+      // force the menu style to be NextStep so that we always edit in 
+      // that style...
+      [[NSUserDefaults standardUserDefaults]
+	setObject: @"NSNextStepInterfaceStyle" 
+	forKey: @"NSMenuInterfaceStyle"];
+
       /*
        * load the interface...
        */
