@@ -1,3 +1,8 @@
+2006-12-27 23:01-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Gorm.m: [Gorm init] added code to force menu interface style
+	to NSNextStepInterfaceStyle.
+
 2006-10-04  Matt Rice  <ratmice@gmail.com>
 
 	* Palettes/3Menus/GormTableViewEditor.m: Start a connection when
